--- a/plugin/languages/isset-video-en.po
+++ b/plugin/languages/isset-video-en.po
@@ -2,18 +2,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/plugin\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: 2021-04-28 16:32+0200\n"
+"POT-Creation-Date: 2021-06-02T11:52:54+00:00\n"
+"PO-Revision-Date: 2021-06-02 14:00+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 2.4.3\n"
 
-#: js/livestream/components/livestream.js:60 src/Plugin.php:357
-#: src/Plugin.php:358
+#: js/livestream/components/livestream.js:60 src/Plugin.php:356
+#: src/Plugin.php:357
 msgid "Livestream"
 msgstr "Livestream"
 
@@ -35,32 +35,6 @@ msgstr "Stream Key"
 
 #: js/livestream/components/livestreamDetails.js:125
 #: js/overview/components/admin-video-details.js:228
-#: js/overview/components/admin-video-details.js:227
-#: js/overview/components/admin-video-details.js:225
-#: js/overview/components/admin-video-details.js:223
-#: js/overview/components/admin-video-details.js:221
-#: js/overview/components/admin-video-details.js:219
-#: js/overview/components/admin-video-details.js:217
-#: js/overview/components/admin-video-details.js:216
-#: js/overview/components/admin-video-details.js:212
-#: js/overview/components/admin-video-details.js:208
-#: js/overview/components/admin-video-details.js:207
-#: js/overview/components/admin-video-details.js:201
-#: js/overview/components/admin-video-details.js:190
-#: js/overview/components/admin-video-details.js:188
-#: js/overview/components/admin-video-details.js:187
-#: js/overview/components/admin-video-details.js:171
-#: js/overview/components/admin-video-details.js:170
-#: js/overview/components/admin-video-details.js:161
-#: js/overview/components/admin-video-details.js:162
-#: js/overview/components/admin-video-details.js:166
-#: js/overview/components/admin-video-details.js:165
-#: js/overview/components/admin-video-details.js:160
-#: js/overview/components/admin-video-details.js:157
-#: js/overview/components/admin-video-details.js:153
-#: js/overview/components/admin-video-details.js:152
-#: js/overview/components/admin-video-details.js:149
-#: js/overview/components/admin-video-details.js:144
 #: js/overview/components/admin-video-overview.js:178
 msgid "Created"
 msgstr "Created"
@@ -133,20 +107,6 @@ msgid "Drop an image file here or browse your computer."
 msgstr "Drop an image file here or browse your computer."
 
 #: js/overview/components/admin-video-details.js:171
-#: js/overview/components/admin-video-details.js:169
-#: js/overview/components/admin-video-details.js:167
-#: js/overview/components/admin-video-details.js:165
-#: js/overview/components/admin-video-details.js:163
-#: js/overview/components/admin-video-details.js:162
-#: js/overview/components/admin-video-details.js:158
-#: js/overview/components/admin-video-details.js:154
-#: js/overview/components/admin-video-details.js:155
-#: js/overview/components/admin-video-details.js:148
-#: js/overview/components/admin-video-details.js:137
-#: js/overview/components/admin-video-details.js:135
-#: js/overview/components/admin-video-details.js:134
-#: js/overview/components/admin-video-details.js:118
-#: js/overview/components/admin-video-details.js:117
 #: js/overview/components/video-upload.js:153
 msgid "Upload"
 msgstr "Upload"
@@ -160,32 +120,6 @@ msgid "Use the following code to embed this video"
 msgstr "Use the following code to embed this video"
 
 #: js/overview/components/admin-video-details.js:224
-#: js/overview/components/admin-video-details.js:223
-#: js/overview/components/admin-video-details.js:221
-#: js/overview/components/admin-video-details.js:219
-#: js/overview/components/admin-video-details.js:217
-#: js/overview/components/admin-video-details.js:215
-#: js/overview/components/admin-video-details.js:213
-#: js/overview/components/admin-video-details.js:212
-#: js/overview/components/admin-video-details.js:208
-#: js/overview/components/admin-video-details.js:204
-#: js/overview/components/admin-video-details.js:203
-#: js/overview/components/admin-video-details.js:197
-#: js/overview/components/admin-video-details.js:186
-#: js/overview/components/admin-video-details.js:184
-#: js/overview/components/admin-video-details.js:183
-#: js/overview/components/admin-video-details.js:167
-#: js/overview/components/admin-video-details.js:166
-#: js/overview/components/admin-video-details.js:157
-#: js/overview/components/admin-video-details.js:158
-#: js/overview/components/admin-video-details.js:162
-#: js/overview/components/admin-video-details.js:161
-#: js/overview/components/admin-video-details.js:156
-#: js/overview/components/admin-video-details.js:153
-#: js/overview/components/admin-video-details.js:149
-#: js/overview/components/admin-video-details.js:148
-#: js/overview/components/admin-video-details.js:145
-#: js/overview/components/admin-video-details.js:140
 #: js/overview/components/admin-video-overview.js:177
 msgid "Filename"
 msgstr "Filename"
@@ -219,6 +153,7 @@ msgid "Delete Selected"
 msgstr "Delete Selected"
 
 #: js/overview/components/admin-video-overview.js:158
+#: js/advertisement/components/advertisementSettings.js:195
 #: js/publisher-video-block.js:236
 msgid "Search"
 msgstr "Search"
@@ -248,11 +183,6 @@ msgstr "No videos found"
 msgid "Processing"
 msgstr "Processing"
 
-#: js/overview/components/admin-video-details.js:130
-#: js/overview/components/video-upload.js:130
-msgid "Drop one or more files here (4.3GB max) or browse your computer."
-msgstr "Drop one or more files here (4.3GB max) or browse your computer."
-
 #: js/overview/components/video-upload.js:112
 msgid "Successfully added %s to archive"
 msgstr "Successfully added %s to archive"
@@ -268,6 +198,10 @@ msgstr "Uploading"
 #: js/overview/components/video-upload.js:122
 msgid "Selected files"
 msgstr "Selected files"
+
+#: js/overview/components/video-upload.js:130
+msgid "Drop one or more files here (4.3GB max) or browse your computer."
+msgstr "Drop one or more files here (4.3GB max) or browse your computer."
 
 #: js/overview/components/video-upload.js:140
 msgid ""
@@ -300,6 +234,78 @@ msgstr "Upload new video"
 msgid "Upload More"
 msgstr "Upload More"
 
+#: js/advertisement/components/advertisementSettings.js:104
+msgid "Enable Video Ads"
+msgstr "Enable Video Ads"
+
+#: js/advertisement/components/advertisementSettings.js:106
+msgid "Enable or disable ads for your videos"
+msgstr "Enable or disable ads for your videos"
+
+#: js/advertisement/components/advertisementSettings.js:120
+msgid "Ad Source"
+msgstr "Ad Source"
+
+#: js/advertisement/components/advertisementSettings.js:122
+msgid "Choose your Ad Server"
+msgstr "Choose your Ad Server"
+
+#: js/advertisement/components/advertisementSettings.js:146
+msgid "Ad Uri"
+msgstr "Ad Uri"
+
+#: js/advertisement/components/advertisementSettings.js:152
+msgid "Ads are Skippable"
+msgstr "Ads are Skippable"
+
+#: js/advertisement/components/advertisementSettings.js:154
+msgid "By enabling this, the shown ads will be skippable by the user"
+msgstr "By enabling this, the shown ads will be skippable by the user"
+
+#: js/advertisement/components/advertisementSettings.js:167
+msgid "Ad Location"
+msgstr "Ad Location"
+
+#: js/advertisement/components/advertisementSettings.js:169
+msgid ""
+"Choose if your ads should be played before, after, or/and during video "
+"playback"
+msgstr ""
+"Choose if your ads should be played before, after, or/and during video "
+"playback"
+
+#: js/advertisement/components/advertisementSettings.js:176
+msgid "Before"
+msgstr "Before"
+
+#: js/advertisement/components/advertisementSettings.js:188
+msgid "After"
+msgstr "After"
+
+#: js/advertisement/components/advertisementSettings.js:200
+msgid "Middle"
+msgstr "Middle"
+
+#: js/advertisement/components/advertisementSettings.js:215
+msgid "Save"
+msgstr "Save"
+
+#: js/advertisement/components/advertisementSettings.js:86
+msgid "Settings saved"
+msgstr "Settings saved"
+
+#: js/advertisement/helpers/advertisement.js:10
+msgid "The key for your VAST endpoint supplied by Adsterra, ie."
+msgstr "The key for your VAST endpoint supplied by Adsterra, ie."
+
+#: js/advertisement/helpers/advertisement.js:12
+msgid "The endpoint supplied by your ad provider, ie."
+msgstr "The endpoint supplied by your ad provider, ie."
+
+#: js/advertisement/helpers/advertisement.js:8
+msgid "The uri supplied by AdSense, ie."
+msgstr "The uri supplied by AdSense, ie."
+
 #: js/publisher-livestream-block.js:85
 msgid "No livestream found"
 msgstr "No livestream found"
@@ -307,6 +313,11 @@ msgstr "No livestream found"
 #: js/publisher-livestream-block.js:95
 msgid "Getting livestream data"
 msgstr "Getting livestream data"
+
+#: js/advertisement/components/advertisementSettings.js:202
+#: js/publisher-video-block.js:234
+msgid "Search videos"
+msgstr "Search videos"
 
 #: js/publisher-video-block.js:158
 msgid "Error"
@@ -340,10 +351,6 @@ msgstr "Autoplay"
 msgid "Videos on isset.video"
 msgstr "Videos on isset.video"
 
-#: js/publisher-video-block.js:234
-msgid "Search videos"
-msgstr "Search videos"
-
 #: js/publisher-video-block.js:244
 msgid "More results"
 msgstr "More results"
@@ -365,9 +372,17 @@ msgstr "Wordpress isset.video implementation"
 msgid "http://isset.nl/"
 msgstr "http://isset.nl/"
 
-#: src/Plugin.php:327
+#: src/Plugin.php:329
 msgid "Videos"
 msgstr "Videos"
+
+#: src/Plugin.php:382
+msgid "Advertisement Settings"
+msgstr "Advertisement Settings"
+
+#: src/Plugin.php:383
+msgid "Advertisement"
+msgstr "Advertisement"
 
 #: views/admin/dashboard/api-dashboard.php:7
 #: views/admin/dashboard/dashboard.php:6
@@ -472,6 +487,3 @@ msgstr "Video cannot be loaded"
 
 #~ msgid "Show advanced options"
 #~ msgstr "Show advanced options"
-
-#~ msgid "Advanced settings"
-#~ msgstr "Advanced settings"
