--- a/plugin/languages/isset-video-nl_NL.po
+++ b/plugin/languages/isset-video-nl_NL.po
@@ -2,18 +2,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/plugin\n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: 2021-04-28 16:35+0200\n"
+"POT-Creation-Date: 2021-06-02T11:52:54+00:00\n"
+"PO-Revision-Date: 2021-06-02 14:00+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 2.4.3\n"
 
-#: js/livestream/components/livestream.js:60 src/Plugin.php:357
-#: src/Plugin.php:358
+#: js/livestream/components/livestream.js:60 src/Plugin.php:356
+#: src/Plugin.php:357
 msgid "Livestream"
 msgstr "Livestream"
 
@@ -35,32 +35,6 @@ msgstr "Stream Sleutel"
 
 #: js/livestream/components/livestreamDetails.js:125
 #: js/overview/components/admin-video-details.js:228
-#: js/overview/components/admin-video-details.js:227
-#: js/overview/components/admin-video-details.js:225
-#: js/overview/components/admin-video-details.js:223
-#: js/overview/components/admin-video-details.js:221
-#: js/overview/components/admin-video-details.js:219
-#: js/overview/components/admin-video-details.js:217
-#: js/overview/components/admin-video-details.js:216
-#: js/overview/components/admin-video-details.js:212
-#: js/overview/components/admin-video-details.js:208
-#: js/overview/components/admin-video-details.js:207
-#: js/overview/components/admin-video-details.js:201
-#: js/overview/components/admin-video-details.js:190
-#: js/overview/components/admin-video-details.js:188
-#: js/overview/components/admin-video-details.js:187
-#: js/overview/components/admin-video-details.js:171
-#: js/overview/components/admin-video-details.js:170
-#: js/overview/components/admin-video-details.js:161
-#: js/overview/components/admin-video-details.js:162
-#: js/overview/components/admin-video-details.js:166
-#: js/overview/components/admin-video-details.js:165
-#: js/overview/components/admin-video-details.js:160
-#: js/overview/components/admin-video-details.js:157
-#: js/overview/components/admin-video-details.js:153
-#: js/overview/components/admin-video-details.js:152
-#: js/overview/components/admin-video-details.js:149
-#: js/overview/components/admin-video-details.js:144
 #: js/overview/components/admin-video-overview.js:178
 msgid "Created"
 msgstr "Aangemaakt"
@@ -134,20 +108,6 @@ msgid "Drop an image file here or browse your computer."
 msgstr "Sleep hier een plaatje op of verken je computer."
 
 #: js/overview/components/admin-video-details.js:171
-#: js/overview/components/admin-video-details.js:169
-#: js/overview/components/admin-video-details.js:167
-#: js/overview/components/admin-video-details.js:165
-#: js/overview/components/admin-video-details.js:163
-#: js/overview/components/admin-video-details.js:162
-#: js/overview/components/admin-video-details.js:158
-#: js/overview/components/admin-video-details.js:154
-#: js/overview/components/admin-video-details.js:155
-#: js/overview/components/admin-video-details.js:148
-#: js/overview/components/admin-video-details.js:137
-#: js/overview/components/admin-video-details.js:135
-#: js/overview/components/admin-video-details.js:134
-#: js/overview/components/admin-video-details.js:118
-#: js/overview/components/admin-video-details.js:117
 #: js/overview/components/video-upload.js:153
 msgid "Upload"
 msgstr "Upload"
@@ -161,32 +121,6 @@ msgid "Use the following code to embed this video"
 msgstr "Gebruik de volgende code om de video toe te voegen"
 
 #: js/overview/components/admin-video-details.js:224
-#: js/overview/components/admin-video-details.js:223
-#: js/overview/components/admin-video-details.js:221
-#: js/overview/components/admin-video-details.js:219
-#: js/overview/components/admin-video-details.js:217
-#: js/overview/components/admin-video-details.js:215
-#: js/overview/components/admin-video-details.js:213
-#: js/overview/components/admin-video-details.js:212
-#: js/overview/components/admin-video-details.js:208
-#: js/overview/components/admin-video-details.js:204
-#: js/overview/components/admin-video-details.js:203
-#: js/overview/components/admin-video-details.js:197
-#: js/overview/components/admin-video-details.js:186
-#: js/overview/components/admin-video-details.js:184
-#: js/overview/components/admin-video-details.js:183
-#: js/overview/components/admin-video-details.js:167
-#: js/overview/components/admin-video-details.js:166
-#: js/overview/components/admin-video-details.js:157
-#: js/overview/components/admin-video-details.js:158
-#: js/overview/components/admin-video-details.js:162
-#: js/overview/components/admin-video-details.js:161
-#: js/overview/components/admin-video-details.js:156
-#: js/overview/components/admin-video-details.js:153
-#: js/overview/components/admin-video-details.js:149
-#: js/overview/components/admin-video-details.js:148
-#: js/overview/components/admin-video-details.js:145
-#: js/overview/components/admin-video-details.js:140
 #: js/overview/components/admin-video-overview.js:177
 msgid "Filename"
 msgstr "Bestandsnaam"
@@ -220,6 +154,7 @@ msgid "Delete Selected"
 msgstr "Verwijder Geselecteerde"
 
 #: js/overview/components/admin-video-overview.js:158
+#: js/advertisement/components/advertisementSettings.js:195
 #: js/publisher-video-block.js:236
 msgid "Search"
 msgstr "Zoeken"
@@ -249,13 +184,6 @@ msgstr "Geen videos gevonden"
 msgid "Processing"
 msgstr "Bezig"
 
-#: js/overview/components/admin-video-details.js:130
-#: js/overview/components/video-upload.js:130
-msgid "Drop one or more files here (4.3GB max) or browse your computer."
-msgstr ""
-"Sleep hier een of meerdere videobestanden op (4,3GB max) of blader op uw "
-"computer. "
-
 #: js/overview/components/video-upload.js:112
 msgid "Successfully added %s to archive"
 msgstr "%s succesvol toegevoegd aan archief"
@@ -271,6 +199,12 @@ msgstr "Uploaden"
 #: js/overview/components/video-upload.js:122
 msgid "Selected files"
 msgstr "Geselecteerd bestand"
+
+#: js/overview/components/video-upload.js:130
+msgid "Drop one or more files here (4.3GB max) or browse your computer."
+msgstr ""
+"Sleep hier een of meerdere videobestanden op (4,3GB max) of blader op uw "
+"computer. "
 
 #: js/overview/components/video-upload.js:140
 msgid ""
@@ -303,6 +237,80 @@ msgstr "Nieuwe video"
 msgid "Upload More"
 msgstr "Meer Uploaden"
 
+#: js/advertisement/components/advertisementSettings.js:104
+msgid "Enable Video Ads"
+msgstr "Video Advertenties Aanzetten"
+
+#: js/advertisement/components/advertisementSettings.js:106
+msgid "Enable or disable ads for your videos"
+msgstr "Advertenties aan- of uitzetten voor al je video's"
+
+#: js/advertisement/components/advertisementSettings.js:120
+msgid "Ad Source"
+msgstr "Advertentie Aanbieder"
+
+#: js/advertisement/components/advertisementSettings.js:122
+msgid "Choose your Ad Server"
+msgstr "Kies je Advertentie Aanbieder"
+
+#: js/advertisement/components/advertisementSettings.js:146
+msgid "Ad Uri"
+msgstr "Ad Uri"
+
+#: js/advertisement/components/advertisementSettings.js:152
+msgid "Ads are Skippable"
+msgstr "Advertenties zijn over te slaan"
+
+#: js/advertisement/components/advertisementSettings.js:154
+msgid "By enabling this, the shown ads will be skippable by the user"
+msgstr ""
+"Wanneer dit aan staat kunnen de advertenties overgeslagen worden door de "
+"gebruiker"
+
+#: js/advertisement/components/advertisementSettings.js:167
+msgid "Ad Location"
+msgstr "Advertentie plek"
+
+#: js/advertisement/components/advertisementSettings.js:169
+msgid ""
+"Choose if your ads should be played before, after, or/and during video "
+"playback"
+msgstr ""
+"Kies of je advertentie aan het begin, in het midden of aan het eind moeten "
+"spelen."
+
+#: js/advertisement/components/advertisementSettings.js:176
+msgid "Before"
+msgstr "Ervoor"
+
+#: js/advertisement/components/advertisementSettings.js:188
+msgid "After"
+msgstr "Erna"
+
+#: js/advertisement/components/advertisementSettings.js:200
+msgid "Middle"
+msgstr "Tussendoor"
+
+#: js/advertisement/components/advertisementSettings.js:215
+msgid "Save"
+msgstr "Opslaan"
+
+#: js/advertisement/components/advertisementSettings.js:86
+msgid "Settings saved"
+msgstr "Instellingen opgeslagen"
+
+#: js/advertisement/helpers/advertisement.js:10
+msgid "The key for your VAST endpoint supplied by Adsterra, ie."
+msgstr "De sleutel uit je advertentie url"
+
+#: js/advertisement/helpers/advertisement.js:12
+msgid "The endpoint supplied by your ad provider, ie."
+msgstr "Het endpoint zoals je die hebt gekregen van de advertentie aanbieder"
+
+#: js/advertisement/helpers/advertisement.js:8
+msgid "The uri supplied by AdSense, ie."
+msgstr "De uri zoals die door AdSense verstrekt is"
+
 #: js/publisher-livestream-block.js:85
 msgid "No livestream found"
 msgstr "Geen livestream gevonden"
@@ -310,6 +318,11 @@ msgstr "Geen livestream gevonden"
 #: js/publisher-livestream-block.js:95
 msgid "Getting livestream data"
 msgstr "Livestream data ophalen"
+
+#: js/advertisement/components/advertisementSettings.js:202
+#: js/publisher-video-block.js:234
+msgid "Search videos"
+msgstr "Zoeken"
 
 #: js/publisher-video-block.js:158
 msgid "Error"
@@ -343,10 +356,6 @@ msgstr "Automatisch afspelen"
 msgid "Videos on isset.video"
 msgstr "Video's op isset.video"
 
-#: js/publisher-video-block.js:234
-msgid "Search videos"
-msgstr "Zoeken"
-
 #: js/publisher-video-block.js:244
 msgid "More results"
 msgstr "Meer resultaten"
@@ -368,9 +377,17 @@ msgstr "Wordpress isset.video implementatie"
 msgid "http://isset.nl/"
 msgstr "http://isset.nl/"
 
-#: src/Plugin.php:327
+#: src/Plugin.php:329
 msgid "Videos"
 msgstr "Video's"
+
+#: src/Plugin.php:382
+msgid "Advertisement Settings"
+msgstr "Advertentie Instellingen"
+
+#: src/Plugin.php:383
+msgid "Advertisement"
+msgstr "Advertenties"
 
 #: views/admin/dashboard/api-dashboard.php:7
 #: views/admin/dashboard/dashboard.php:6
@@ -476,9 +493,6 @@ msgstr "Deze video kan niet geladen worden"
 #~ msgid "Show advanced options"
 #~ msgstr "Laat geavanceerde opties zien"
 
-#~ msgid "Advanced settings"
-#~ msgstr "Geavanceerde opties"
-
 #~ msgid ""
 #~ "Storage limit is already reached, please remove video's to upload again "
 #~ "or upgrade your subscription"
@@ -501,9 +515,6 @@ msgstr "Deze video kan niet geladen worden"
 
 #~ msgid "Import from publisher"
 #~ msgstr "Importeer"
-
-#~ msgid "Parent Videos:"
-#~ msgstr "Hoort hij:"
 
 #~ msgid "No videos found in Trash."
 #~ msgstr "Geen videos gevonden tussen deze rommel"
